fix: align explorations heading to top of section

--- a/index.css
+++ b/index.css
@@ -3138,8 +3138,9 @@ body.body-locked {
 .explorations-left {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
+  padding-top: 6rem;
   height: 70vh;
   position: relative;
   z-index: 2;
